--- a/docs/ref.bib
+++ b/docs/ref.bib
@@ -23,6 +23,7 @@
 	title = {Multiple {Fundamental} {Frequency} {Estimation} of {Polyphonic} {Recordings}},
 	language = {en},
 	author = {Yeh, Chunghsin},
+	year = {2008},
 	pages = {153},
 	file = {Yeh - Multiple Fundamental Frequency Estimation of Polyp.pdf:/home/rand/Zotero/storage/HMBS4B73/Yeh - Multiple Fundamental Frequency Estimation of Polyp.pdf:application/pdf}
 }
@@ -175,6 +176,8 @@ La hauteur d'un son périodique est étroitement liée à sa période. Pour perc
 	title = {The {Feynman} {Lectures} on {Physics} {Vol}. {I} {Ch}. 47: {Sound}. {The} wave equation},
 	url = {https://www.feynmanlectures.caltech.edu/I_47.html},
 	urldate = {2020-03-08},
+	author = {Feynman, Richard},
+	year = {1965},
 	file = {The Feynman Lectures on Physics Vol. I Ch. 47\: Sound. The wave equation:/home/rand/Zotero/storage/QDYKH6FK/I_47.html:text/html}
 }
 
@@ -188,7 +191,7 @@ Perfect reconstruction may still be possible when the sample-rate criterion is n
 	language = {en},
 	urldate = {2020-03-08},
 	journal = {Wikipedia},
-	month = feb,
+	author = {Wikipedia},
 	year = {2020},
 	note = {Page Version ID: 941933031},
 	file = {Snapshot:/home/rand/Zotero/storage/I3RNMMYI/index.html:text/html}
@@ -209,6 +212,7 @@ Perfect reconstruction may still be possible when the sample-rate criterion is n
 	abstract = {This paper proposes a conceptually simple and computationally efﬁcient fundamental frequency (F0) estimator for polyphonic music signals. The studied class of estimators calculate the salience, or strength, of a F0 candidate as a weighted sum of the amplitudes of its harmonic partials. A mapping from the Fourier spectrum to a “F0 salience spectrum” is found by optimization using generated training material. Based on the resulting function, three different estimators are proposed: a “direct” method, an iterative estimation and cancellation method, and a method that estimates multiple F0s jointly. The latter two performed as well as a considerably more complex reference method. The number of concurrent sounds is estimated along with their F0s.},
 	language = {en},
 	author = {Klapuri, Anssi},
+	year = {2006},
 	pages = {6},
 	file = {Klapuri - Multiple Fundamental Frequency Estimation by Summi.pdf:/home/rand/Zotero/storage/47AJWRKL/Klapuri - Multiple Fundamental Frequency Estimation by Summi.pdf:application/pdf}
 }
@@ -230,11 +234,12 @@ Perfect reconstruction may still be possible when the sample-rate criterion is n
 	file = {Smaragdis and Brown - 2003 - Non-negative matrix factorization for polyphonic m.pdf:/home/rand/Zotero/storage/PZVCHZP3/Smaragdis and Brown - 2003 - Non-negative matrix factorization for polyphonic m.pdf:application/pdf}
 }
 
-@article{cont_realtime_nodate,
+@article{cont_2006,
 	title = {Realtime {Multiple} {Pitch} {Observation} using {Sparse} {Non}-negative {Constraints}},
 	abstract = {In this paper we introduce a new approach for realtime multiple pitch observation of musical instruments. The proposed algorithm is quite different from others in the literature both in its purpose and approach. It is destined not for continuous multiple f0 recognition but rather for projection of the ongoing spectrum to learned pitch templates. The decomposition algorithm on the other hand, does not compromise signal processing models for pitches and consists of an algorithm for efﬁcient decomposition of a spectrum using known pitch structures and based on sparse non-negative constraints. After introducing the algorithm along with evaluations, a real-time implementation of the algorithm is provided for free download for the MaxMSP realtime programming environment.},
 	language = {en},
 	author = {Cont, Arshia},
+	year = {2006},
 	pages = {6},
 	file = {Cont - Realtime Multiple Pitch Observation using Sparse N.pdf:/home/rand/Zotero/storage/3ZXUJ5I8/Cont - Realtime Multiple Pitch Observation using Sparse N.pdf:application/pdf}
 }
@@ -244,19 +249,9 @@ Perfect reconstruction may still be possible when the sample-rate criterion is n
 	abstract = {Current music analysis-resynthesis models represent sounds through a set of features, which are extracted from a time-frequency representation. So that each time-frame can present a good approximation to the instantaneous spectrum, it is necessary to analyse the waveform in short segments. This is achieved with a window function whose position is advanced by a fixed amount between frames. When the window encompasses a transient event, such as the percussive onset of a note, it contains information both before and after the event. These partiallycorrelated spectra often become confused during analysis and cause audible ‘diffusion’ upon resynthesis.},
 	language = {en},
 	author = {Masri, Paul and Bateman, Andrew},
+	year = {1996},
 	pages = {4},
 	file = {Masri and Bateman - Improved Modelling of Attack Transients in Music A.pdf:/home/rand/Zotero/storage/KZIM5XF9/Masri and Bateman - Improved Modelling of Attack Transients in Music A.pdf:application/pdf}
-}
-
-@misc{bello,
-	title = {({PDF}) {Phase}-based note onset detection for music signals},
-	url = {https://www.researchgate.net/publication/4068561_Phase-based_note_onset_detection_for_music_signals},
-	abstract = {PDF {\textbar} Summary form only given. Note onsets mark the beginning of attack transients, short areas of a note containing rapid changes of the signal... {\textbar} Find, read and cite all the research you need on ResearchGate},
-	language = {en},
-	urldate = {2020-03-12},
-	journal = {ResearchGate},
-	doi = {http://dx.doi.org/10.1109/ASPAA.2003.1285811},
-	file = {Snapshot:/home/rand/Zotero/storage/NLX75UAW/4068561_Phase-based_note_onset_detection_for_music_signals.html:text/html}
 }
 
 @article{duxbury,
@@ -267,4 +262,28 @@ Perfect reconstruction may still be possible when the sample-rate criterion is n
 	year = {2003},
 	pages = {4},
 	file = {Duxbury et al. - 2003 - COMPLEX DOMAIN ONSET DETECTION FOR MUSICAL SIGNALS.pdf:/home/rand/Zotero/storage/YSTVED2X/Duxbury et al. - 2003 - COMPLEX DOMAIN ONSET DETECTION FOR MUSICAL SIGNALS.pdf:application/pdf}
+}
+
+@book{muller_2015,
+	title = {Fundamentals of {Music} {Processing} - {Audio}, {Analysis}, {Algorithms}, {Applications}},
+	isbn = {978-3-319-21944-8},
+	url = {https://www.audiolabs-erlangen.de/fau/professor/mueller/bookFMP},
+	publisher = {Springer},
+	author = {Müller, Meinard},
+	year = {2015}
+}
+
+@inproceedings{bello,
+	title = {Phase-based note onset detection for music signals},
+	volume = {5},
+	doi = {10.1109/ICASSP.2003.1200001},
+	abstract = {Note onsets mark the beginning of attack transients, short areas of a note containing rapid changes of the signal spectral content. Detecting onsets is not trivial, especially when analysing complex mixtures. Applications for note onset detection systems include time stretching, audio coding and synthesis. An alternative to standard energy-based onset detection is proposed by using phase information. It is suggested that by observing the frame-by-frame distribution of differential angles, the precise moment when onsets occur can be detected with accuracy. Statistical measures are used to build the detection function. The system is tested and tuned on a database of complex recordings.},
+	booktitle = {2003 {IEEE} {International} {Conference} on {Acoustics}, {Speech}, and {Signal} {Processing}, 2003. {Proceedings}. ({ICASSP} '03).},
+	author = {Bello, J.P. and Sandler, M.},
+	month = apr,
+	year = {2003},
+	note = {ISSN: 1520-6149},
+	keywords = {attack transients, audio coding, Audio coding, audio databases, audio synthesis, complex mixture analysis, complex recording database, Databases, differential angles, frame-by-frame distribution, Multiple signal classification, music, Music, music signals, Phase detection, phase-based note onset detection, rapid changes, Signal detection, signal spectral content, signal synthesis, Signal synthesis, spectral analysis, statistical analysis, Statistical analysis, statistical measures, Steady-state, System testing, time stretching, transients},
+	pages = {V--441},
+	file = {IEEE Xplore Abstract Record:/home/rand/Zotero/storage/X3J5LIKD/1200001.html:text/html}
 }
