Restructured docs dir

--- a/docs/include/preambule.tex
+++ b/docs/include/preambule.tex
@@ -31,7 +31,7 @@
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lhead{\@title}
+\lhead{Automatic Music Transcription}
 \rhead{Rand ASSWAD}
 
 \usepackage{pmboxdraw} % for tree chars encoding
