--- a/docs/include/cover.tex
+++ b/docs/include/cover.tex
@@ -1,7 +1,6 @@
 \begin{titlepage}
     \begin{sffamily}
         \begin{center}
-            %\includegraphics[width=0.8\textwidth]{img/logo_insa.png}\\[2cm]
             \begin{minipage}[c]{0.45\textwidth}
             \raggedright\includegraphics[height=2cm]{img/logo_insa.png}
             \end{minipage}~\hfill~%
@@ -13,7 +12,7 @@
 
             % Title
             \HRule \\[0.4cm]
-            {\huge \bfseries \@title \\[0.4cm]}
+            {\huge \bfseries Automatic Music Transcription \\[0.4cm]}
             \HRule \\[1cm]
             
             \textsc{\huge Audio Signal Processing}\\[1cm]
@@ -38,7 +37,7 @@
 
             \vfill
             % Bottom of the page
-            {\large \@date}
+            {\large 12 March 2020}
         \end{center}
     \end{sffamily}
 \end{titlepage}
